# SciAxC

./: pyproject.toml
sciaxc/: Input_Data_Time_ValidMetric_Features_Rates_30_Features_Geomorph_CVHV_Saturation_Cells_Validity_BVE_Comparable.csv  Prediction_Sandbox.ipynb
sciaxc/.ipynb_checkpoints/: Prediction_Sandbox-checkpoint.ipynb
