[tool.poetry]
name = "sciaxc"
version = "0.1.0"
description = ""
authors = ["Jnsll <june@sallou.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.1.1"
more-itertools = "^10.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
